--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
-<html><body><h1>It works!</h1>
-<p>yar, gooners, yar</p>
-<img src="fundtotals.png" />
-<img src="fundchart.png" />
-
-</body></html>
+<html>
+    <head>
+        <link rel="stylesheet" href="main.css">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <div class="jumbotron">
+            <h1>It works!</h1>
+            <p>yar, gooners, yar</p>
+            <div class="container">
+                <div class="col-sm-6">
+                    <img src="fundtotals.png" />
+                </div>
+                <div class="col-sm-6">
+                    <img src="fundchart.png" />
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
