--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="jumbotron">
             <h1>It works!</h1>
             <p>yar, gooners, yar</p>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="col-sm-6">
                     <img src="fundtotals.png" />
                 </div>
