--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <h1>It works!</h1>
             <p>yar, gooners, yar</p>
             <div class="container-fluid">
-                <div class="col-sm-6">
-                    <img src="fundtotals.png" />
+                <div class="col-sm-9">
+                    <img class="img-responsive" src="fundtotals.png" />
                 </div>
-                <div class="col-sm-6">
-                    <img src="fundchart.png" />
+                <div class="col-sm-3">
+                    <img class="img-responsive" src="fundchart.png" />
                 </div>
             </div>
         </div>
