--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
             <h1>It works!</h1>
             <p>yar, gooners, yar</p>
             <div class="container-fluid">
-                <div class="col-sm-6">
-                    <img class="img-responsive" src="fundtotals.png" />
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img class="img-responsive" src="fundtotals.png" />
+                    </div>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive" src="fundchart.png" />
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img class="img-responsive" src="fundchart.png" />
+                    </div>
                 </div>
             </div>
         </div>
